[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/menu/OptionChooser.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/play_menu_scene/SummaryDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/menu/play_menu_scene/PlayMenuContent.gd" type="Script" id=3]
[ext_resource path="res://src/menu/common/ScrollableContainer.tscn" type="PackedScene" id=4]

[node name="ArcadeMenuContentControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.873
script = ExtResource( 3 )

[node name="OptionsContainerControl" type="Control" parent="."]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.22

[node name="ColorRect" type="ColorRect" parent="OptionsContainerControl"]
anchor_left = 0.04
anchor_right = 0.96
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="ModeOptionChooserControl" parent="OptionsContainerControl" instance=ExtResource( 1 )]
anchor_bottom = 0.4
margin_bottom = 0.0

[node name="DifficultyOptionChooserControl" parent="OptionsContainerControl" instance=ExtResource( 1 )]
anchor_top = 0.4
anchor_bottom = 0.8
margin_bottom = 0.0

[node name="SummaryDisplayControl" parent="OptionsContainerControl" instance=ExtResource( 2 )]
anchor_top = 0.8
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="ScrollableContainerControl" parent="." instance=ExtResource( 4 )]
anchor_top = 0.24
anchor_right = 1.0
anchor_bottom = 0.98
